<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- For DroppShareActivity -->
	<string name="app_name">DroppShare</string>
	<string name="app_description">Share your favorite app!</string>

	<string name="installed">Installed</string>
	<string name="history">History</string>
	<string name="recent">RecentlyUsed</string>

	<string name="added">Added</string>
	<string name="replaced">Updated</string>
	<string name="removed">Removed</string>

	<string name="uri_shorten_failure">sorry, URI shorten failure...</string>
	<string name="app_not_exists">Application not exists.</string>

	<string name="http_schema">Paste http:// format</string>
	<string name="market_schema">Paste market:// format</string>
	<string name="googl_shorten">Paste compress by goo.gl</string>
	<string name="qr_code">Show QR code</string>

	<string name="cache_refresh">Refresh caches</string>
	<string name="show_selector">Selector</string>
	<string name="preferences">Preference</string>

	<!-- For PreferenceActivity -->
	<string name="paste_uri_type">URI format</string>
	<string name="paste_uri_type_summary">Which do you like? http or market</string>
	<string name="uri_shorten">URI shorten</string>
	<string name="uri_shorten_summary">Do you want URI shorten?</string>

	<string name="create_cache_automatically">Create cache automatically</string>
	<string name="create_cache_automatically_summary">Automatically create the background.</string>

	<string name="message_added_title">Message format</string>
	<string name="message_added_summary">If you write $app, $market, $version, $description.
		ther are replaced.</string>
	<string name="message_added">$app $version $description AndroidOnly→$market
		#droppshare</string>

	<!-- For DroppRedirectActivity -->
	<string name="redirect_name">Redirect to Market</string>
	<string name="redirect_market_summary">If detect market://. Auto link to market.</string>

	<!-- For DroppViewerActivity -->
	<string name="read_failure_src">Reading src file was failure.</string>
	<string name="read_failure_dest">Reading dest file was failure.</string>

	<string name="now_matchting_data">Now matching data...</string>
	<string name="wait_a_moment">Wait a moment...</string>

	<!-- For DroppSelectorActivity -->
	<string name="gen_drozip">Generate Drozip</string>
	<string name="add_dir">Add directory</string>

	<string name="gen_drozip_title">Enter file name.</string>
	<string name="gen_drozip_positive">generate</string>
	<string name="gen_drozip_negative">cancel</string>

	<string name="now_compress_data">Compress App data</string>

	<string name="add_dir_title">Where is dropp files?</string>
	<string name="add_dir_button_text">This directory is!</string>

	<string name="files_not_exists">"*.dropp" files not exists.</string>

	<!-- For DroppHostingClientActivity -->
	<string name="hosting_client_name">DroppHosting</string>

	<!-- For ActivityHelper -->
	<string name="cant_resolve_intent_title">Need %s</string>
	<string name="cant_resolve_intent_message">Do you want download it from Market?</string>
	<string name="go_market">Go market</string>
	<string name="ignore">ignore</string>

	<string name="oi_file_manager_app_name">OI File Manager</string>
	<string name="oi_file_manager_package">org.openintents.filemanager</string>
	<string name="zxing_app_name">QR code generater</string>
	<string name="zxing_package">com.google.zxing.client.android</string>

	<!-- For XmlUtil -->
	<string name="screen_dpi">unknown</string>
</resources>
